Changelog for Miosix np embedded OS

v1.59
- Added tests to testsuite for endianness.h
- Added interfaces/endianness.h with optimized functions to convert to/from
  lille/big endian, as well as byte swapping.
- Improved boot speed by replacing for loops to initialize .data, .bss and
  to initialize the stack of threads with memset/memcpy.
- Improved getMiosixVersion(), new format contains more information, including
  board name, build date and compiler version.
- The files binutils-2.21.tar.bz2 and gdb-7.0.tar.bz2 no longer exist on the
  ftp.gnu.org and mirrors.kernel.org, and this broke the compiler installation
  script. Fixed by downloading binutils-2.21.1 and gdb-7.0.1a.
- Added DCC support for the stm32vldiscovery board, to be able to redirect
  printf through SWD. This has also become the default option for that board.

v1.58
- Added new board stm32vldiscovery
- Fixed a bug in the syscall code to handle static constructors. Despite the
  gcc documentation said that a __guard was 8 bytes, it is actually only 4
- Changing linker scripts to be compatble with the way GCC handles
  .bss with C programs
- Added _times_r in syscalls.cpp to make clock() in time.h work
- Added exception thread safety test to testsuite.
- Added class ExceptionHandlingData that keeps a per-thread data structure
  used to make C++ exceptions thead safe.
- Updated gcc patches, newlib patches and gcc build scripts. Now as far as
  I know, every bit of gcc, newlib and libstdc++ is fully threadsafe, finally!
  (Except the _Reent struct that will be fixed later)
- Fixed a bug in pthread_once(), optimized __cxa_guard_* code.
- Made __register_exitproc() and __call_exitprocs() two new syscalls, to allow
  a future implementation of atexit support.
- Added support for pthread_once, also added new patch to newlib to reduce the
  size of pthread_once_t from 8 bytes to 2 bytes
- Added __cxa_guard_acquire(), __cxa_guard_release() and __cxa_guard_abort()